testing/errors/test_recursion_limit.txts
IMPORT recurse
CALL recurse.self
